# sendr

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Formula/: sendr.rb
completions/: install.sh  sendr.zsh
src/: Cli.cpp  Cli.h  CommunicationLogger.cpp  CommunicationLogger.h  Config.cpp  Config.h  Daemon.cpp  Daemon.h  DotEnv.cpp  DotEnv.h  Downloader.cpp  Downloader.h  DownloaderInterface.h  EventListener.h  HtmlParser.cpp  HtmlParser.h  HttpClient.cpp  HttpClient.h  KQueueListener.cpp  KQueueListener.h  LoggingListener.h  Mailer.cpp  Mailer.h  MailerListener.h  MockDownloader.h  Pager.h  Pid.h  RowReader.cpp  RowReader.h  SearchClient.cpp  SearchClient.h  SmtpClient.cpp  SmtpClient.h  TestDotEnv.cpp  TestHtmlParser.cpp  TestUtils.cpp  Using.h  Utils.h  main.cpp
tools/: build_index.py
